infrastructure/03-traefik/foreign/scanner/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scanner
  namespace: traefik
spec:
  type: ExternalName
  externalName: 192.168.178.53
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: scanner
