infrastructure/03-traefik/foreign/scanner/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: scanner
  namespace: traefik
spec:
  entryPoints:
    - websecure-local
  tls: {}
  routes:
  - match: Host(`scanner.steffenillium.de`)
    kind: Rule
    services:
    - name: scanner
      port: http
